se añadio la clase global para la paginacion de la respuesta, se modifico la funcion de buscar todos los usuario y buscar todos los pacientes para que incluyan paginacion